--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY PORTFOLIO WEBSITE</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Handlee&family=Montserrat&family=Open+Sans:wght@400;700;800&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/portfolio.css">
 </head>
 <body>
     <header>
+        <nav>
+            <h3 class="nav-title">HASI<span class="text-primary">B</span></h3>
+            <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="">BLOG</a></li>
+                <li><button class="btn-primary">HIRE ME</button></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
