--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">HASI<span class="text-primary">B</span></h3>
             <ul>
@@ -20,6 +20,17 @@
                 <li><button class="btn-primary">HIRE ME</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner-greeting">HEY I AM</h3>
+                <h1 class="banner-title">HASIB AHMED</h1>
+                <p>
+                    I am a junior web developer, currently working in my first job for a small company, <br>I was hired because I have an interest in meteor and modern web dev.</p>
+                    <button class="btn-primary">DOWNLOAD CV</button>
+                    <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="./image/hasib3-removebg-preview.png" alt="image">
+        </div>
 
     </header>
     <main>
