created new things

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </nav>
         <div class="banner">
             <div>
-                <h3 class="banner-greeting">HEY I AM</h3>
+                <h3 class="banner-greeting">HEY I AM,</h3>
                 <h1 class="banner-title">HASIB AHMED</h1>
-                <p>
+                <p class="short">
                     I am a junior web developer, currently working in my first job for a small company, <br>I was hired because I have an interest in meteor and modern web dev.</p>
                     <button class="btn-primary">DOWNLOAD CV</button>
                     <button class="btn-primary">Contact</button>
@@ -34,7 +34,13 @@
 
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">ABOUT ME</h3>
+            <p class="section-description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque repudiandae eos et quasi quaerat velit nesciunt, aliquid quis <br>expedita suscipit, deleniti at doloribus. Quis, pariatur. Id fugiat molestias et libero. Lorem ipsum dolor sit, amet consectetur adipisicing <br>
+                 Velit natus incidunt earum dolorem asperiores facilis! Nostrum quibusdam ut odit eveniet quia. Ipsa doloribus sit omnis praesentium quis sed, error neque.
+            </p>
+        </section>
     </main>
     <footer>
         
