--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <section class="about">
             <h3 class="section-title">ABOUT ME</h3>
             <p class="section-description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque repudiandae eos et quasi quaerat velit nesciunt, aliquid quis <br>expedita suscipit, deleniti at doloribus. Quis, pariatur. Id fugiat molestias et libero. Lorem ipsum dolor sit, amet consectetur adipisicing <br>
-                 Velit natus incidunt earum dolorem asperiores facilis! Nostrum quibusdam ut odit eveniet quia. Ipsa doloribus sit omnis praesentium quis sed, error neque.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque repudiandae eos et quasi quaerat velit nesciunt, aliquid quis <br>expedita suscipit, deleniti at doloribus. Quis, pariatur. Id adipisicing 
+                 
             </p>
             <div class="about-info-container">
                 <div class="about-inf">
